--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --vlu-red: #d72134;
+  --vlu-blue: #1E224F
+  --background-image: url("/background.png");
 }
 
 @theme inline {
@@ -20,7 +23,127 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-image: url("/background.png");
+  background-size: cover;
+  background-position: center;
+}
+
+/* Main section */
+.before-notch-right::before {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 80px;
+  background-color: white;
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  bottom: 15%;
+  right: 0;
+}
+
+.before-notch-right {
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  width: 45px;
+  height: 30px;
+  background: white;
+  top: 15%;
+  right: 0;
+  border-bottom-left-radius: 100px;
+  border-top-left-radius: 100px;
+}
+.icon2 {
+  position: absolute;
+  width: 45px;
+  height: 30px;
+  background: white;
+  bottom: 15%;
+  left: 0;
+  border-bottom-right-radius: 100px;
+  border-top-right-radius: 100px;
+}
+
+.icon::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -20px;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  border-bottom-right-radius: 50px;
+  box-shadow: 10px 10px 0px 10px #ffff;
+}
+.icon2::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -20px;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  border-top-left-radius: 50px;
+  box-shadow: -10px -10px 0px 10px #ffff;
+}
+
+.icon::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 30px;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  border-top-right-radius: 50px;
+  box-shadow: 10px -10px 0px 10px #ffff;
+}
+
+.icon2::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -20px;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  border-bottom-left-radius: 50px;
+  box-shadow: -10px 10px 0px 10px #ffff;
+}
+
+.rec {
+  overflow: hidden;
+  
+}
+
+.rec::after {
+  content: " ";
+  background: white;
+  width: 50vw;
+  height: 120px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: inherit;
+}  
+.rec::before {
+  content: " ";
+  background: white;
+  width: 50vw;
+  height: 220px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: inherit;
+}
+
+.program-card {
+  @apply bg-white p-6 rounded-lg shadow-xl/10 hover:shadow-xl transition-all duration-300 cursor-pointer 
+  transform hover:-translate-y-1 hover:scale-105;
+}
+
+.btn {
+  @apply transition-all ease-in-out duration-300 cursor-pointer hover:-translate-x-1;
 }
